--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
   --led_screen_app_padding: 30px;
   --led_screen_border_color: #e0e0e0;
+}
+
+html {
+  font-family: 'Roboto';
 }
