--- a/src/FormContainer/FormContainer.css
+++ b/src/FormContainer/FormContainer.css
@@ -5,3 +5,10 @@
     padding: calc(var(--led_screen_app_padding) / 1.5) var(--led_screen_app_padding);
     height: calc(100vh - 65px - (var(--led_screen_app_padding) * 1.5));
 }
+
+.led-screen-form-container h2 {
+    font-size: 19px;
+    font-weight: 700;
+    margin-bottom: 14px;
+
+}
