--- a/src/FormContainer/FormResults/FormResults.css
+++ b/src/FormContainer/FormResults/FormResults.css
@@ -3,4 +3,5 @@
     grid-template-columns: 2fr 1fr;
     border: 1px solid var(--led_screen_border_color);
     padding: var(--led_screen_app_padding);
+    max-width: 100vw;
 }
