--- a/src/FormContainer/FormInputs/DownloadBtn/DownloadBtn.css
+++ b/src/FormContainer/FormInputs/DownloadBtn/DownloadBtn.css
@@ -6,11 +6,15 @@
     align-items: center;
 }
 
-.led-screen-form-download:hover {
-    cursor: pointer;
+.led-screen-form-download button {
+    border: none;
+    background: none;
+    color: white;
+    font-weight: 600;
+    width: 100%;
+    height: 100%;
 }
 
-.led-screen-form-download a {
-    text-decoration: none;
-    color: white;
+.led-screen-form-download button:hover {
+    cursor: pointer;
 }
