--- a/src/FormContainer/FormInputs/ConfigurationSection/ConfigurationSection.css
+++ b/src/FormContainer/FormInputs/ConfigurationSection/ConfigurationSection.css
@@ -1,7 +1,7 @@
 .led-screen-form-configuration {
     border: 1px solid var(--led_screen_border_color);
     padding: var(--led_screen_app_padding) calc(var(--led_screen_app_padding) / 1.5);
-    margin-bottom: var(--led_screen_app_padding);
+    margin-bottom: calc(var(--led_screen_app_padding) / 2);
 }
 
 .led-screen-form-configuration label {
