--- a/src/FormContainer/FormInputs/DownloadBtn/DownloadBtn.css
+++ b/src/FormContainer/FormInputs/DownloadBtn/DownloadBtn.css
@@ -13,6 +13,7 @@
     font-weight: 600;
     width: 100%;
     height: 100%;
+    font-size: 14px;
 }
 
 .led-screen-form-download button:hover {
@@ -22,6 +23,14 @@
 .led-screen-download-icon {
     width: 55px;
     height: 100%;
-    background: 184fee;
-    border-left: 1px solid #fafafa;
+    background: #184fee;
+    border-left: 1px solid var(--led_screen_border_color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.led-screen-download-icon span {
+    color: white;
+    font-size: 19px;
 }
