add receptacle box data & select box and update section styles

--- a/src/FormContainer/FormResults/DetailsContainer/DetailsContainer.css
+++ b/src/FormContainer/FormResults/DetailsContainer/DetailsContainer.css
@@ -9,5 +9,5 @@
 }
 
 .led-screen-details-section > div > div{
-    padding: var(--led_screen_app_padding);
+    padding: var(--led_screen_app_padding) calc(var(--led_screen_app_padding) / 1.7);
 }
