--- a/src/FormContainer/FormResults/DetailsContainer/DimensionBoxes/DimensionBoxes.css
+++ b/src/FormContainer/FormResults/DetailsContainer/DimensionBoxes/DimensionBoxes.css
@@ -6,28 +6,5 @@
 
 .led-screens-result-dimensions {
     padding: 15px;
-    border: 1px solid #000;
-}
-
-.led-screens-dimension-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
-    font-size: 15px;
-}
-
-.led-screens-dimension-grid p {
-    width: 7vw;
-    padding: 10px 0;
-    border: 1px solid #000;
-    margin: 6px 0;
-}
-
-.led-screens-dimension-grid p:first-of-type {
-    background: #9c9c9c;
-    color: #fff;
-}
-
-.led-screens-dimension-grid p:last-of-type {
-    border-left: none;
+    border: 1px solid var(--led_screen_border_dark);
 }
