--- a/src/FormContainer/FormResults/DetailsContainer/DimensionBoxes/DimensionBoxes.css
+++ b/src/FormContainer/FormResults/DetailsContainer/DimensionBoxes/DimensionBoxes.css
@@ -8,3 +8,9 @@
     padding: 15px;
     border: 1px solid var(--led_screen_border_dark);
 }
+
+@media only screen and (max-width: 1080px){
+    .led-screens-dimensions-container {
+        margin-bottom: calc(var(--led_screen_app_padding) / 2);
+    }
+}
