--- a/src/FormContainer/FormContainer.css
+++ b/src/FormContainer/FormContainer.css
@@ -10,3 +10,9 @@
     font-weight: 700;
     margin-bottom: 14px;
 }
+
+@media only screen and (max-width: 1366px) {
+    .led-screen-form-container h2 {
+        font-size: 18px;
+    }
+}
