--- a/src/FormContainer/FormResults/DetailsContainer/DescriptionResults/DescriptionResults.css
+++ b/src/FormContainer/FormResults/DetailsContainer/DescriptionResults/DescriptionResults.css
@@ -72,3 +72,9 @@
     background: #fff !important;
     min-height: 64px;
 }
+
+@media only screen and (max-width: 1366px) {
+    .led-screens-desc-grid p {
+        font-size: 14px;
+    }
+}
