--- a/src/FormContainer/FormResults/FormResults.css
+++ b/src/FormContainer/FormResults/FormResults.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr;
     border: 1px solid var(--led_screen_border_light);
     padding: var(--led_screen_app_padding);
+    padding-left: calc(var(--led_screen_app_padding / 2));
     max-width: 100vw;
 }
 
